--- a/contents/projects/cavium.html
+++ b/contents/projects/cavium.html
@@ -6,4 +6,4 @@ company: Cavium
 companyUrl: http://www.cavium.com/
 ---
 
-<p>Saneef worked with engineers at Cavium to develop in­form­a­tion ar­chi­tec­ture for their <abbr title="Network-attached storage">NAS</abbr> administration tool. He also developed visual language and designed the interfaces for the tool.</p>
+<p>Saneef worked with engineers at Cavium to develop in­form­a­tion ar­chi­tec­ture for their <abbr title="Network-attached storage">NAS</abbr> administration tool. He also developed the visual language and designed the interfaces for the tool.</p>
