--- a/contents/projects/jp-morgan-careers.html
+++ b/contents/projects/jp-morgan-careers.html
@@ -7,4 +7,4 @@ agency: Razorfish
 agencyUrl: http://razorfish.com/
 ---
 
-<p>JP Morgan’s career website overhaul. Worked at Razorfish and helped to complete the interface and experience design of the JP Morgan Career Website.</p>
+<p>We worked with Razorfish and helped to complete the interface and experience design for a complete overhaul of the JP Morgan Careers website.</p>
