--- a/contents/projects/pearson-publishing.html
+++ b/contents/projects/pearson-publishing.html
@@ -6,4 +6,4 @@ company: Pearson Publishing
 companyUrl: http://www.pearsoned.com/
 ---
 
-<p>A template for teachers to build a magnitude of learning tools for kids. Activity Builder won many accolades and awards for Pearson Publishing. In 2005, it was one of the new and pioneering tools for education.</p>
+<p>Activity Builder was a template for teachers to build many kinds of learning tools for kids. It won many accolades and awards for Pearson Publishing. In 2005 it was one of the new and pioneering tools for education.</p>
