--- a/contents/projects/abof.com.html
+++ b/contents/projects/abof.com.html
@@ -7,4 +7,4 @@ projectUrl: http://www.abof.com
 title: abof.com
 ---
 
-<p>Brajeshwar, along with his team – Saneef Ansari, Ankur Sethi and Ciju Cherian – went on to take the Aditya Birla’s eCommerce undertaking <a href="http://www.abof.com">abof.com</a> to a new heights of front-end optimization and delivery. It is poised to become <a href="https://www.youtube.com/watch?v=kwaVtMW0soo">the fastest eCommerce Progressive Web App</a>. The new version abof.com is a high performant web app that leverages the powers of Isomorphic JavaScript, Service Workers, Immutable.js, etc.</p>
+<p>Brajeshwar, along with his team — Saneef Ansari, Ankur Sethi and Ciju Cherian — went on to take Aditya Birla’s e-commerce undertaking <a href="http://www.abof.com">abof.com</a> to new heights of front-end optimization and delivery. Poised to become <a href="https://www.youtube.com/watch?v=kwaVtMW0soo">the fastest e-commerce progressive web app</a>, the new version of abof.com is a high performant web app that leverages the powers of isomorphic JavaScript, service workers and Immutable.js.</p>
