--- a/contents/projects/compile.html
+++ b/contents/projects/compile.html
@@ -7,4 +7,4 @@ company: Compile Inc.
 companyUrl: https://www.compile.com
 ---
 
-<p>Saneef together with Enakshi, helped in the concept, design, and development  of the Compile’s website. He also provided, a study on im­prov­ing the qual­ity of data given to cli­ents through reg­u­lar end user feed­backs. Saneef de­signed and de­veloped uni­fied in­ter­face for the Com­pile’s various products.</p>
+<p>Saneef, together with Enakshi, helped in the concept, design, and development of Compile’s website. He also provided a study on im­prov­ing the qual­ity of data given to cli­ents through reg­u­lar end-user feed­back. Saneef de­signed and de­veloped a uni­fied in­ter­face for Com­pile’s various products.</p>
