--- a/contents/projects/insider.in.html
+++ b/contents/projects/insider.in.html
@@ -7,4 +7,4 @@ company: OML Entertainment
 companyUrl: http://oml.in/
 ---
 
-<p>Insider.in is a curated events and ticketing platform. Ankur, worked on all parts of the Insider platform: the user-facing e-commerce website, the vendor-facing administration and analytics dashboard, and the suite of <abbr title="Representational state transfer">REST</abbr> microservices powering the entire operation.</p>
+<p>Insider.in is a curated events and ticketing platform. Ankur worked on all parts of the Insider platform: the user-facing e-commerce website, the vendor-facing administration and analytics dashboard, and the suite of <abbr title="Representational state transfer">REST</abbr> microservices powering the entire operation.</p>
