--- a/contents/projects/testmyfont.com.html
+++ b/contents/projects/testmyfont.com.html
@@ -7,4 +7,4 @@ company: Understanding Limited
 companyUrl: http://understandinglimited.com
 ---
 
-<p>Funded by Google and Understanding Limited, TestMyFont.com is a browser-based tool that helps authors visually compare typefaces. Ankur built the entire application from scratch with design and workflow inputs from Dave Crossland and the team behind the Metapolator project.</p>
+<p>Funded by Google and Understanding Limited, <a href="http://testmyfont.com/">TestMyFont.com</a> is a browser-based tool that helps authors visually compare typefaces. Ankur built the entire application from scratch with design and workflow inputs from Dave Crossland and the team behind the Metapolator project.</p>
