--- a/contents/projects/vongo.com.html
+++ b/contents/projects/vongo.com.html
@@ -6,5 +6,5 @@ company: STARZ network
 companyUrl: http://www.starz.com/
 ---
 
-<p>Vongo was a video on demand service that allowed users to download and view movies for a fixed price per month. Vongo was in service from Jan-2006 till Sep-2008.</p>
+<p>Vongo was a video on demand service that allowed users to download and view movies for a fixed price per month. Vongo was in service from January 2006 through September 2008.</p>
 <p>Brajeshwar was responsible for developing the video player interface and the underlying core to stream videos. The possibility of streaming videos starting at just 700kbps of bandwidth at that time was an achievement for <abbr>STARZ</abbr>.</p>
