--- a/contents/index.html
+++ b/contents/index.html
@@ -18,7 +18,7 @@ description: We help businesses every step of the way in building beautiful and 
 <div class="hero">
 	<div class="hero__inner">
 		<div class="hero__text-unit">
-			<p>We believe that software should be simple to use for humans. At the same time bringing higher returns on investment for businesses. We help you every step of the way in building beautiful and performant products.</p>
+			<p>We believe that software should be simple to use for humans. At the same time, it should bring higher returns on investment for businesses.</p>
 			<br>
 			<p>We have helped
 				<a class="link link--minor" href="https://www.zoho.com/">Zoho</a>,
@@ -27,7 +27,7 @@ description: We help businesses every step of the way in building beautiful and 
 				<a class="link link--minor" href="http://www.compile.com/">Compile</a>,
 				<a class="link link--minor" href="https://www.linkedin.com/company/724333">Indianstage</a>,
 				<a class="link link--minor" href="http://www.starz.com/"><span class="caps-to-small-caps">STARZ</span></a>,
-				<a class="link link--minor" href="http://www.obeo.com/"><span class="caps-to-small-caps">OBEO</span></a>,
+				<a class="link link--minor" href="http://www.obeo.com/">Obeo</a>,
 				<a class="link link--minor" href="http://www.pearsoned.com/">Pearson Publishing</a>,
 				<a class="link link--minor" href="http://www.onmobile.com/">OnMobile</a>,
 				<a class="link link--minor" href="https://www.linkedin.com/company/zoomdeck-technologies-pvt-ltd-">Zoomdeck</a>,
@@ -38,7 +38,7 @@ description: We help businesses every step of the way in building beautiful and 
 				and many more.
 			</p>
 			<br>
-			<p>Want us to help? {{ contactTriggerTag(text = 'Write to us', email = site.contactEmail) }}.</p>
+			<p>We can help you every step of the way in building beautiful and performant products too. {{ contactTriggerTag(text = 'Just get in touch', email = site.contactEmail) }}.</p>
 		</div>
 	</div>
 </div>
