--- a/contents/index.html
+++ b/contents/index.html
@@ -9,17 +9,13 @@ description: We help businesses every step of the way in building beautiful and 
 {% block content %}
 <div class="hero-quote">
 	<div class="hero-quote__inner">
-		<blockquote class="hero-quote__quote">
-		<span class="hero-quote__line">Design is not making beauty; beauty emerges from selection, affinities, integration, love.</span><cite><a href="//en.wikipedia.org/wiki/Louis_Kahn">Louis Kahn</a></cite>
-		</blockquote>
+		<blockquote class="hero-quote__quote">We design and build, beautiful and performant products.</blockquote>
 	</div>
 </div>
 
 <div class="hero">
 	<div class="hero__inner">
 		<div class="hero__text-unit">
-			<p>We believe that software should be simple to use for humans. At the same time, it should bring higher returns on investment for businesses.</p>
-			<br>
 			<p>We have helped
 				<a class="link link--minor" href="https://www.zoho.com/">Zoho</a>,
 				<a class="link link--minor" href="http://adityabirla.com/">Aditya Birla</a>,
@@ -38,7 +34,7 @@ description: We help businesses every step of the way in building beautiful and 
 				and many more.
 			</p>
 			<br>
-			<p>We can help you every step of the way in building beautiful and performant products too. {{ contactTriggerTag(text = 'Just get in touch', email = site.contactEmail) }}.</p>
+			<p>{{ contactTriggerTag(isButton=true, text = 'Let us help you in your next project →', email = site.contactEmail) }}</p>
 		</div>
 	</div>
 </div>
