chuck the comma

--- a/contents/index.html
+++ b/contents/index.html
@@ -9,7 +9,7 @@ description: We help businesses every step of the way in building beautiful and 
 {% block content %}
 <div class="hero-quote">
 	<div class="hero-quote__inner">
-		<blockquote class="hero-quote__quote">We design and build, beautiful and performant products.</blockquote>
+		<blockquote class="hero-quote__quote">We design and build beautiful and performant products.</blockquote>
 	</div>
 </div>
 
