fixes build for the new metalsmith-in-place

--- a/src/events/reactjs-summer-2016.html
+++ b/src/events/reactjs-summer-2016.html
@@ -2,7 +2,7 @@
 title: ReactJS Proficiency for JavaScript Developers
 ---
 
-{% extends "./layouts/base.html" %}
+{% extends "./layouts/base.njk" %}
 
 {% block content %}
 <article class="article">
